--- a/src/main/resources/game/civilization/Game.fxml
+++ b/src/main/resources/game/civilization/Game.fxml
@@ -3,7 +3,4 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane fx:id="pane"
-      maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0"
-      prefWidth="1600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="game.civilization.FxmlController.GameSceneController"/>
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1600.0" styleClass="background" stylesheets="@GamePictures/Game.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.civilization.FxmlController.GameSceneController" />
