--- a/src/main/resources/game/civilization/Game.fxml
+++ b/src/main/resources/game/civilization/Game.fxml
@@ -38,5 +38,6 @@
         <Label fx:id="scienceLabel" layoutX="41.0" layoutY="7.0" prefHeight="31.0" prefWidth="54.0" />
         <Label fx:id="goldLabel" layoutX="160.0" layoutY="9.0" prefHeight="31.0" prefWidth="54.0" />
         <Label fx:id="happinessLabel" layoutX="274.0" layoutY="7.0" prefHeight="31.0" prefWidth="54.0" />
+      <Label fx:id="civilizationName" alignment="CENTER" layoutX="1348.0" layoutY="6.0" prefHeight="21.0" prefWidth="105.0" stylesheets="@GamePictures/Game.css" />
     </children>
 </Pane>
