--- a/src/main/resources/game/civilization/Game.fxml
+++ b/src/main/resources/game/civilization/Game.fxml
@@ -15,6 +15,7 @@
                 <Font size="15.0" />
             </font>
         </Button>
+      <Button layoutX="1249.0" layoutY="10.0" mnemonicParsing="false" onAction="#CheatActivate" text="Cheat" />
         <ImageView fitHeight="31.0" fitWidth="44.0" layoutX="1470.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@GamePictures/mainIcons/Turn.png" />
