--- a/src/main/resources/game/civilization/css/ScoreBoardCSS.css
+++ b/src/main/resources/game/civilization/css/ScoreBoardCSS.css
@@ -92,3 +92,17 @@
   -fx-background-radius: 15px;
   -fx-text-background-color: white;
 }
+
+Button{
+  -fx-background-color:
+  linear-gradient(#ffd65b, #e68400),
+  linear-gradient(#ffef84, #f2ba44),
+  linear-gradient(#ffea6a, #ff9921),
+  linear-gradient(#ffe657 0%, #ff9921 50%, #ff9921 100%);
+
+-fx-text-fill: #654b00;
+-fx-font-weight: bold;
+-fx-font-size: 14px;
+-fx-font-family: "Baloo Bhaina";
+-fx-background-radius: 30;
+}
