--- a/src/main/resources/game/civilization/fxml/Game.fxml
+++ b/src/main/resources/game/civilization/fxml/Game.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="backPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1600.0" styleClass="background" stylesheets="@../css/Game.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.civilization.FxmlController.GameSceneController">
+<Pane fx:id="backPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1600.0" styleClass="background" stylesheets="@../css/Game.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.civilization.FxmlController.GameScenes.GameSceneController">
     <children>
         <Pane fx:id="pane" layoutY="46.0" prefHeight="857.0" prefWidth="1600.0" />
         <Button fx:id="nextTurnButton" layoutX="1501.0" mnemonicParsing="false" onAction="#nextTurn" prefHeight="30.0" prefWidth="99.0" text="next turn">
