--- a/src/main/resources/game/civilization/fxml/Game.fxml
+++ b/src/main/resources/game/civilization/fxml/Game.fxml
@@ -40,5 +40,10 @@
         <Label fx:id="goldLabel" layoutX="160.0" layoutY="9.0" prefHeight="31.0" prefWidth="54.0" />
         <Label fx:id="happinessLabel" layoutX="274.0" layoutY="7.0" prefHeight="31.0" prefWidth="54.0" />
       <Label fx:id="civilizationName" alignment="CENTER" layoutX="1348.0" layoutY="6.0" prefHeight="21.0" prefWidth="105.0" stylesheets="@../css/Game.css" />
+      <Label fx:id="turnLabel" alignment="CENTER" layoutY="49.0" prefHeight="851.0" prefWidth="1600.0" textFill="RED">
+         <font>
+            <Font size="96.0" />
+         </font>
+      </Label>
     </children>
 </Pane>
