--- a/src/main/resources/game/civilization/fxml/Game.fxml
+++ b/src/main/resources/game/civilization/fxml/Game.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -15,6 +16,11 @@
          </font>
       </Label>
         <Pane fx:id="pane" layoutY="46.0" prefHeight="857.0" prefWidth="1600.0" />
+      <TextArea fx:id="notification" layoutX="556.0" prefHeight="48.0" prefWidth="618.0" promptText="Notification">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextArea>
         <Button fx:id="nextTurnButton" layoutX="1501.0" mnemonicParsing="false" onAction="#nextTurn" prefHeight="30.0" prefWidth="99.0" text="next turn">
             <font>
                 <Font size="15.0" />
