completed city menu

--- a/src/main/resources/game/civilization/css/Game.css
+++ b/src/main/resources/game/civilization/css/Game.css
@@ -2,3 +2,11 @@
     -fx-background-image: url('../images/GamePictures/Cloud.jpg');
     -fx-background-size: cover;
 }
+
+.scroll-pane {
+    -fx-background-color: transparent;
+}
+
+.scroll-pane .viewport {
+    -fx-background-color: transparent;
+}
