--- a/src/main/resources/game/civilization/fxml/ScoreBoardView.fxml
+++ b/src/main/resources/game/civilization/fxml/ScoreBoardView.fxml
@@ -16,8 +16,9 @@
                 <TableColumn fx:id="avatarColumn" prefWidth="150.0" text="Avatar" />
                 <TableColumn fx:id="usernameColumn" prefWidth="150.0" text="Username" />
                 <TableColumn fx:id="scoreColumn" prefWidth="150.0" text="Score" />
-                <TableColumn fx:id="lastWinColumn" prefWidth="300.0" text="Last Win" />
-                <TableColumn fx:id="lastLoginColumn" prefWidth="300.0" text="Last Login" />
+                <TableColumn fx:id="lastWinColumn" prefWidth="250.0" text="Last Win" />
+                <TableColumn fx:id="lastLoginColumn" prefWidth="250.0" text="Last Login" />
+                <TableColumn fx:id="isOnlineColumn" prefWidth="100.0" text="is Online" />
             </columns>
         </TableView>
         <Button layoutX="42.0" layoutY="660.0" mnemonicParsing="false" onAction="#back" text="BACK" />
