--- a/src/main/resources/game/civilization/fxml/Lobby.fxml
+++ b/src/main/resources/game/civilization/fxml/Lobby.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.civilization.FxmlController.LobbyController">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.civilization.FxmlController.LobbyController">
    <children>
       <ImageView fitHeight="764.0" fitWidth="1333.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -34,12 +34,12 @@
             <Font name="Baloo Bhaina Regular" size="24.0" />
          </font>
       </Label>
-      <TextField layoutX="939.0" layoutY="340.0" prefHeight="42.0" prefWidth="231.0" promptText="NUMBER OF PLAYERS" fx:id="number">
+      <TextField fx:id="number" layoutX="939.0" layoutY="340.0" prefHeight="42.0" prefWidth="231.0" promptText="NUMBER OF PLAYERS">
          <font>
             <Font name="Baloo Bhaina Regular" size="14.0" />
          </font>
       </TextField>
-      <Button fx:id="ok" layoutX="1036.0" layoutY="526.0" mnemonicParsing="false" text="OK" onAction="#addGame">
+      <Button fx:id="ok" layoutX="1036.0" layoutY="526.0" mnemonicParsing="false" onAction="#addGame" text="OK">
          <font>
             <Font name="Baloo Bhaina Regular" size="14.0" />
          </font>
@@ -65,17 +65,17 @@
             </LinearGradient>
          </textFill>
       </Label>
-      <Button fx:id="refresh" layoutX="316.0" layoutY="626.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="65.0" text="REFRESH" onAction="#initialize">
+      <Button fx:id="refresh" layoutX="316.0" layoutY="626.0" mnemonicParsing="false" onAction="#initialize" prefHeight="26.0" prefWidth="65.0" text="REFRESH">
          <font>
             <Font name="Baloo Bhaina Regular" size="11.0" />
          </font>
       </Button>
-      <TextField layoutX="939.0" layoutY="412.0" prefHeight="42.0" prefWidth="231.0" promptText="ID" fx:id="id">
+      <TextField fx:id="id" layoutX="939.0" layoutY="412.0" prefHeight="42.0" prefWidth="231.0" promptText="ID">
          <font>
             <Font name="Baloo Bhaina Regular" size="14.0" />
          </font>
       </TextField>
-      <CheckBox layoutX="1015.0" layoutY="481.0" mnemonicParsing="false" text="PRIVATE" fx:id="privatee">
+      <CheckBox fx:id="privatee" layoutX="1015.0" layoutY="481.0" mnemonicParsing="false" text="PRIVATE">
          <font>
             <Font name="Baloo Bhaina Regular" size="12.0" />
          </font>
