--- a/src/main/resources/game/civilization/fxml/GameMenuView.fxml
+++ b/src/main/resources/game/civilization/fxml/GameMenuView.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -24,13 +23,17 @@
     </ChoiceBox>
     <Label layoutX="1053.0" layoutY="548.0" styleClass="customLabel" text="AutoSave" />
     <Label layoutX="514.0" layoutY="548.0" styleClass="customLabel" text="Music" />
-    <Button layoutX="510.0" layoutY="144.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="325.0" text="Play Game" />
+    <Button onAction="#enterLobby" layoutX="510.0" layoutY="144.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="325.0" text="Enter Lobby" />
     <TextField layoutX="510.0" layoutY="100.0" />
     <Button layoutX="690.0" layoutY="96.0" mnemonicParsing="false" text="Send Invitation" />
     <Label layoutX="914.0" layoutY="104.0" styleClass="heightWidthLabel" text="Height:" />
     <Label layoutX="918.0" layoutY="157.0" styleClass="heightWidthLabel" text="Width:" />
-    <Button layoutX="1029.0" layoutY="464.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="118.0" text="Load Game" />
     <Circle layoutX="50.0" layoutY="61.0" radius="30.0" stroke="BLACK" strokeType="INSIDE" styleClass="inbox" />
-    <Circle fx:id="inbox" layoutX="50.0" layoutY="61.0" radius="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0"/>
+    <Circle fx:id="inbox" layoutX="50.0" layoutY="61.0" radius="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+      <Button onAction="#playGame" layoutX="511.0" layoutY="216.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="216.0" text="Play game" />
+      <Button onAction="#buildMap" layoutX="514.0" layoutY="296.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="216.0" text="Build Map" />
+      <Button onAction="#continueGame" layoutX="763.0" layoutY="216.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="216.0" text="Continue Game" />
+      <Button onAction="#loadMap" layoutX="768.0" layoutY="296.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="216.0" text="Load map" />
   </children>
 </AnchorPane>
+
