--- a/src/main/resources/game/civilization/fxml/GameMenuView.fxml
+++ b/src/main/resources/game/civilization/fxml/GameMenuView.fxml
@@ -24,12 +24,12 @@
     <Label layoutX="1053.0" layoutY="548.0" styleClass="customLabel" text="AutoSave" />
     <Label layoutX="514.0" layoutY="548.0" styleClass="customLabel" text="Music" />
     <Button onAction="#enterLobby" layoutX="510.0" layoutY="144.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="325.0" text="Enter Lobby" />
-    <TextField layoutX="510.0" layoutY="100.0" />
-    <Button layoutX="690.0" layoutY="96.0" mnemonicParsing="false" text="Send Invitation" />
+    <TextField layoutX="510.0" layoutY="100.0" fx:id="invitationText"/>
+    <Button layoutX="690.0" layoutY="96.0" mnemonicParsing="false" text="Send Invitation" onAction="#sentInvitation"/>
     <Label layoutX="914.0" layoutY="104.0" styleClass="heightWidthLabel" text="Height:" />
     <Label layoutX="918.0" layoutY="157.0" styleClass="heightWidthLabel" text="Width:" />
     <Circle layoutX="50.0" layoutY="61.0" radius="30.0" stroke="BLACK" strokeType="INSIDE" styleClass="inbox" />
-    <Circle fx:id="inbox" layoutX="50.0" layoutY="61.0" radius="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+    <Circle fx:id="inbox" layoutX="50.0" layoutY="61.0" radius="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" onMouseClicked="#showInvitationPanel"/>
       <Button onAction="#playGame" layoutX="511.0" layoutY="216.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="216.0" text="Play game" />
       <Button onAction="#buildMap" layoutX="514.0" layoutY="296.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="216.0" text="Build Map" />
       <Button onAction="#continueGame" layoutX="763.0" layoutY="216.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="216.0" text="Continue Game" />
